tests/cases/compiler-development/artifact/errors/diagnostic-lexer-unsupported-string-escape.diagnostic
diagnostic error code=L0001 family=lexer message="unsupported string escape" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-lexer-unsupported-string-escape.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-lexer-unsupported-string-escape.ari" bytes=52
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-lexer-unsupported-string-escape.ari" line=2 column=16 end_line=2 end_column=17 byte_start=34 byte_end=35 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-lexer-unsupported-string-escape.ari:2:16\n   |\n 2 |   let text = \"\\q\";\n   |                ^"
  Note index=0 location=none message="Ari escapes support common control escapes, quotes, backslash, byte escapes, octal, and Unicode escapes"
  Help index=0 location=none message="use a supported escape such as \\n, \\t, \\\\, \\xNN, \\u{...}, or remove the backslash"
